--- a/styles.css
+++ b/styles.css
@@ -88,14 +88,25 @@ div > .section {
 	font-size: 0.9em;
 }
 
+.projects {
+	background: #f2f2f2;
+}
 
+.project-pic {
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+	margin: 0 auto;
+}
 .profile-pic{
   width:70%;
   display: block;
   margin: 0 auto;
 }
 
-
+h2 {
+	margin: 0;
+}
 .center {
 	text-align: center;
 }
@@ -110,4 +121,16 @@ div > .section {
 
 .space-small {
 	padding-top: 25px;
+}
+
+.line-separator {
+	height:3px;
+	width: 100px;
+	background:#FFD800;
+	/*border-bottom:1px solid #313030;*/
+}
+
+.line-center {
+	 margin-left: auto ;
+  margin-right: auto ;
 }
